# Dingo

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  dependencies.py  idml_processor.py  main.py  process.py  pyproject.toml  storage.py  test.csv  test_translated.csv  token_manager.py  translator.py  worker.py
example/: R15_A1_Manual_v1.03(WW).csv  glossary_example.csv  test.csv
routers/: idml.py  live.py  prompt.py  tasks.py  ws.py
static/: dlink.css  script.js  style.css
templates/: index.html
test/: conftest.py  run_all_tests.py  test_csv_translator_playwright.py  test_idml_tools.py  test_live_translator.py
